--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -13,6 +13,12 @@ riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 
 [profile.release]
 debug = true
+# opt-level=0
+# split-debuginfo="unpacked"
+debuginfo-level = 1
+
+# Debuginfo level for the compiler.
+debuginfo-level-rustc = 2
 
 [features]
 board_qemu = []
